--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model Person
+@model Movie
 
 @{
-    ViewData["Title"] = @Model.Name;
+    ViewData["Title"] = Model.Title;
 }
 
-
-<h3>@Model.Name</h3>
-<p>Date of Birth: @Model.Birth</p>
+<h3>@Model.Title</h3>
+<p>Release Year: @Model.Year</p>
