--- a/Views/People/Index.cshtml
+++ b/Views/People/Index.cshtml
@@ -1,31 +1,19 @@
-﻿@*@model List<Customer>*@
+﻿@model IEnumerable<Person>
 
 @{
     ViewData["Title"] = "Actors and Directors";
 }
 
-<h1>People</h1>
+<h2>Popular People</h2>
 
-@*
-    @if (@Model.Count == 0)
+<table class="table table-hover">
+    <tr>
+        <th>Name</th>
+    </tr>
+@foreach (var person in Model)
 {
-    <text>We currently don't have any customers</text>
+    <tr>
+        <td>@Html.ActionLink(person.Name, "Details", "People", new { id = person.Id }, new { @class = "link-dark"})</td>
+    </tr>
 }
-else
-    {
-
-    <table class="table table-bordered table-hover">
-        <tr>
-            <th>Customer</th>
-        </tr>
-    @foreach (var customer in @Model)
-    {
-        <tr>
-            <td>@Html.ActionLink(@customer.Name, "Details", "People",
-                    new { id = @customer.Id }, null)
-            </td>
-        </tr>
-    }
-    </table>
-}
-*@
+</table>
