Made movies and people links in the details pages

--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -58,7 +58,7 @@
         else
         {
 
-            <table class="table table-hover">
+            <table class="table table-hover" style="width: 800px; margin-left:  100px; margin-right: 100px">
                 <tr>
                     <th></th>
                     <th>Name</th>
