--- a/Views/People/Index.cshtml
+++ b/Views/People/Index.cshtml
@@ -2,6 +2,16 @@
 
 @{
     ViewData["Title"] = "Actors and Directors";
+    Pager pager = new Pager();
+
+    int pageNo = 1;
+
+    if (ViewBag.Pager != null)
+    {
+        pager = ViewBag.Pager;
+        pageNo = pager.CurrentPage;
+    }
+
 }
 
 <h2>Popular People</h2>
@@ -17,3 +27,35 @@
     </tr>
 }
 </table>
+
+<div class="container">
+    @if (pager.TotalPages > 0)
+    {
+        <ul class="pagination justify-content-end">
+            @if (pager.CurrentPage > 1)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-controller="People" asp-action="Index" asp-route-pageIndex="1">First</a>
+                </li>
+                <li>
+                    <a class="page-link" asp-controller="People" asp-action="Index" asp-route-pageIndex="@(pager.CurrentPage - 1)">Previous</a>
+                </li>
+            }
+            @for (var pg = pager.StartPage; pg <= pager.EndPage; pg++)
+            {
+                <li class="page-item @(pg == pager.CurrentPage ? "active" : "")">
+                    <a class="page-link" asp-route-pageIndex="@pg" asp-controller="People" asp-action="Index">@pg</a>
+                </li>
+            }
+            @if (pager.CurrentPage < pager.TotalPages)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-controller="People" asp-action="Index" asp-route-pageIndex="@(pager.CurrentPage + 1)">Next</a>
+                </li>
+                <li>
+                    <a class="page-link" asp-controller="People" asp-action="Index" asp-route-pageIndex="@(pager.TotalPages)">Last</a>
+                </li> 
+            }
+        </ul>
+    }
+</div>
