--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - MVDB - Information Courtesy of IMVDB (<a href="https://imdb.com">imdb.com</a>)
+            &copy; 2022 - MVDB - Information Courtesy of IMDB (<a href="https://imdb.com">imdb.com</a>)
             <!-- <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> -->
         </div>
     </footer>
